--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
   <div class="page-wrapper">
 
     <!-- Start Contact Banner -->
-    <div class="contact-banner flex-center">
-      <div><a href="tel:07723474069">07723474069</a></div>
-      <div><a href="mailto:amanda@skylarkfarmadvice.co.uk">amanda@skylarkfarmadvice.co.uk</a></div>
-    </div>
+    <aside class="contact-banner">
+      <div class="contact-wrapper flex-center">
+        <h1>Got a question?</h1>
+        <h1> <a href="tel:07723474069"></a>+44 73 05 07 2073</h1>
+      </div>
+    </aside>
     <!-- End Contact Banner -->
 
     <!-- Header Starts Here -->
@@ -77,6 +79,10 @@
             </ul>
           </div>
 
+          <div class="contact-btn hidden mobile">
+            <a class="btn" href="mailto:amanda@skylarkfarmadvice.co.uk">Get in touch</a>
+          </div>
+
         </div>
 
       </nav>
@@ -100,196 +106,236 @@
 
       </div>
 
- 
 
 
 
-  </section>
-  <!-- Hero Section End Here -->
+
+    </section>
+    <!-- Hero Section End Here -->
 
 
-  <!-- About Section Starts Here -->
-  <section class="about-wrapper" id="about">
-    <h2 class="section-title">About Skylark</h2>
-    <p class="about-description">I specialise in working with farmers to <span class="text-highlight">maximise</span>
-      the environmental potential of their land while <span class="text-highlight">supporting</span> the farm
-      business.</p>
+    <!-- About Section Starts Here -->
+    <section class="about-wrapper" id="about">
+      <h2 class="section-title">About Skylark</h2>
+      <p class="about-description">I specialise in working with farmers to <span class="text-highlight">maximise</span>
+        the environmental potential of their land while <span class="text-highlight">supporting</span> the farm
+        business.</p>
 
-    <p>Offering a range of services including including countryside stewardship; habitat and species surveys, and
-      advice; compliance and greening guidance; soil management; meeting regulatory requirements, workshops and
-      training and assurance schemes.</p>
+      <p>I provide a range of services including including countryside stewardship; habitat and species surveys, and
+        advice; compliance and greening guidance; soil management; meeting regulatory requirements, workshops and
+        training and assurance schemes.</p>
 
-    <p>I have been providing farm advice for over 15 years in Hampshire and surrounding areas. I am a member of Chartered
-      Institute of Ecology and Environmental Management, with a a BSc in Ecology, as well as holding certificates in
-      BASIS Foundation in Agronomy, Soil and Water Management and Conservation Management.
-      I have over 10 years experience of working on agri-environment schemes including Countryside Stewardship as well
-      as delivery of independent grant schemes and partnership projects.</p>
+      <p>I have been providing farm advice for over 15 years in Hampshire and surrounding areas. I am a member of
+        Chartered
+        Institute of Ecology and Environmental Management, with a a BSc in Ecology, as well as holding certificates in
+        BASIS Foundation in Agronomy, Soil and Water Management and Conservation Management.
+        I have over 10 years experience of working on agri-environment schemes including Countryside Stewardship as well
+        as delivery of independent grant schemes and partnership projects.</p>
 
-  </section>
-  <!-- About Section Ends Here -->
+    </section>
+    <!-- About Section Ends Here -->
 
 
-  <!-- Services Section Starts Here -->
-  <section class="services-wrapper" id="services">
-    <h2 class="section-title">How can we help you?</h2>
+    <!-- Services Section Starts Here -->
+    <section class="services-wrapper" id="services">
+      <h2 class="section-title">How can we help you?</h2>
 
-    <div class="services-card">
-      <div class="services-card-title">
-        <h3>Countryside Stewardship</h3>
-      </div>
+      <div class="services-card">
+        <div class="services-card-title">
+          <h3>Countryside Stewardship</h3>
+        </div>
 
-      <div class="services-card-img">
-        <img class="services-img-mobile" src="/assets/images/fieldTractorMobile.jpeg" alt="">
-        <img class="services-img-desktop" src="/assets/images/fieldTractorDesktop3.jpeg" alt="">
-      </div>
+        <div class="services-card-img">
+          <img class="services-img-mobile" src="/assets/images/redTractor_mobile.jpeg" alt="">
+          <img class="services-img-desktop" src="/assets/images/redTractor_desktop.jpeg" alt="">
+        </div>
 
-      <div class="services-card-content">
-        <div class="stewardship-options">
-          <div class="stewardship-title">
-            <h4 class="stewardship-link">Pre-entry Countryside Stewardship Farm Review</h4>
-            <h4 class="stewardship-btn">+</h4>
+        <div class="services-card-content">
+
+          <div class="services-options">
+
+            <div class="services-subtitle">
+              <h4 class="servicces-link">Pre-entry Countryside Stewardship Farm Review</h4>
+              <h4 class="services-btn">+</h4>
+            </div>
+            <p class="services-description">An initial visit to your farm to discuss the Countryside
+              Stewardship scheme requirements, priorities for your area and to identify potential options that you may
+              like
+              to consider in your application. A short report will be produced to help inform your future application.
+            </p>
           </div>
-          <p class="stewardship-description">An initial visit to your farm to discuss the Countryside
-            Stewardship scheme requirements, priorities for your area and to identify potential options that you may
-            like
-            to consider in your application. A short report will be produced to help inform your future application.
+
+          <div class="services-options">
+
+            <div class="services-subtitle">
+              <h4 class="services-link">Mid Tier, Higher Tier and Capital Grant Applications</h4>
+              <h4 class="services-btn">+</h4>
+            </div>
+            <p class="services-description">With over 10 years in undertaking successful
+              agri-environment scheme applications, Amanda will work with you to design an application that meets the
+              priorities for the area. Maximising your chances of a successful agreement, while working with the
+              requirements of your farm business.</p>
+          </div>
+
+          <div class="services-options">
+
+            <div class="services-subtitle">
+              <h4 class="services-link">Application Check </h4>
+              <h4 class="services-btn">+</h4>
+            </div>
+            <p class="services-description">If you prefer to carry out your own application we provide an application
+              check service, ensuring the forms
+              have been completed as required and advising on whether the options chosen fit with the
+              Countryside Stewardship priorities for the area, maximising your chances of a successful application.</p>
+          </div>
+
+          <div class="services-options">
+
+            <div class="services-subtitle">
+              <h4 class="services-link">Stewardship Scheme MOT</h4>
+              <h4 class="services-btn">+</h4>
+            </div>
+            <p class="services-description">Helping you to ensure you are meeting the requirements of your ELS, OELS,
+              HLS or Countryside Stewardship
+              scheme. Providing reassurance on compliance with the regulatory requirements together
+              with advice on how to maximise the environmental benefits of your scheme.</p>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="services-card">
+        <div class="services-card-title">
+          <h3>Access to support schemes</h3>
+        </div>
+
+        <div class="services-card-img"> <img src="/assets/images/lambsMobile.jpeg" alt=""></div>
+
+        <div class="services-card-content">
+
+          <div class="services-options">
+            <div class="services-subtitle">
+              <h4 class="services-link">A wide variety of grants are now available to farmers in order to help support
+                environmental management.</h4>
+              <!-- <h4 class="services-btn">+</h4> -->
+            </div>
+
+
+          </div>
+          <p class="services-description">From Mid Tier to Higher Tier, Capital Grants and Woodland Support Grants,
+            through to Farming in Protected
+            Landscapes, Farming Investment Fund, Water Company grant schemes.</p>
+
+          <p class="services-description">With over 10 years experience in undertaking successful agri-environment
+            scheme
+            applications as well
+            as working with Catchment Sensitive Farming and Water Companies to implement and deliver grant schemes,
+            I can advise you on funding opportunities available, help you to decide what is right for your farm and
+            assist from application to delivery.
           </p>
-        </div>
 
-        <div class="stewardship-options">
-          <div class="stewardship-title">
-            <h4 class="stewardship-link">Mid Tier, Higher Tier and Capital Grant Applications</h4>
-            <h4 class="stewardship-btn">+</h4>
+        </div>
+      </div>
+
+      <div class="services-card">
+        <div class="services-card-title">
+          <h3>Soil Management</h3>
+        </div>
+        <div class="services-card-img"> <img src="/assets/images/soilManagementMobile.jpeg" alt=""></div>
+
+        <div class="services-card-content">
+
+          <div class="services-options">
+
+            <div class="services-subtitle">
+              <h4 class="services-link">Provide advice on diffuse pollution and resource protection including the soil
+                management requirements under
+                Cross Compliance.</h4>
+              <!-- <h4 class="services-btn">+</h4> -->
+
+              <!-- <p class="services-description"></p> -->
+            </div>
+
           </div>
-          <p class="stewardship-description">With over 10 years in undertaking successful
-            agri-environment scheme applications, Amanda will work with you to design an application that meets the
-            priorities for the area. Maximising your chances of a successful agreement, while working with the
-            requirements of your farm business.</p>
         </div>
 
-        <div class="stewardship-options">
-          <div class="stewardship-title">
-            <h4 class="stewardship-link">Application Check </h4>
-            <h4 class="stewardship-btn">+</h4>
+      </div>
+
+      <div class="services-card">
+        <div class="services-card-title">
+          <h3>Farm Advice Training and
+            Workshops</h3>
+        </div>
+        <div class="services-card-img"> <img src="/assets/images/workshopMobile.jpeg" alt=""></div>
+
+        <div class="services-card-content">
+
+          <div class="services-options">
+            <div class="services-subtitle">
+              <h4 class="services-link">Experienced in arranging and delivering training and workshops on a range of
+                topics.</h4>
+              <h4 class="services-btn">+</h4>
+
+              <p class="services-description">Recent events have included:</p>
+
+              <ul class="services-description">
+                <li>hedgerow management</li>
+                <li>soil management</li>
+                <li>NVZ and Cross Compliance update</li>
+                <li>biobeds</li>
+                <li>equine management</li>
+                <li>farm pollinators</li>
+                <li>slug control</li>
+              </ul>
+
+            </div>
+
+
           </div>
-          <p class="stewardship-description">If you prefer to carry out your own application we provide an application
-            check service, ensuring the forms
-            have been completed as required and advising on whether the options chosen fit with the
-            Countryside Stewardship priorities for the area, maximising your chances of a successful application.</p>
+
         </div>
 
-        <div class="stewardship-options">
-          <div class="stewardship-title">
-            <h4 class="stewardship-link">Stewardship Scheme MOT</h4>
-            <h4 class="stewardship-btn">+</h4>
-          </div>
-          <p class="stewardship-description">Helping you to ensure you are meeting the requirements of your ELS, OELS,
-            HLS or Countryside Stewardship
-            scheme. Providing reassurance on compliance with the regulatory requirements together
-            with advice on how to maximise the environmental benefits of your scheme.</p>
+    </section>
+    <!-- Services Section Ends Here -->
+
+    <!-- Case Studies Section Starts Here -->
+    <!-- <section class="case-studies-wrapper" id="case-studies"></section> -->
+    <!-- Case Studies Section Ends Here -->
+
+
+    <!-- Footer Starts Here -->
+    <footer class="footer" id="footer">
+
+      <div class="social-links flex-center">
+
+        <div>
+          <ul class="flex-center">
+            <!-- <li><a href="http://twitter.com"><i class="fa-brands fa-twitter"></i></a></li> -->
+
+            <!-- <li><a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li> -->
+
+            <li><a href="https://www.linkedin.com/in/amanda-ingham-5953047b"><i
+                  class="fa-brands fa-linkedin-in icon"></i></a>
+            </li>
+
+            <li><a href="mailto:amanda@skylarkfarmadvice.co.uk"><i class="fa-solid fa-envelope icon"></i></a></li>
+
+            <li><a href="tel:07723474069"><i class="fa-solid fa-phone icon"></i></a></li>
+          </ul>
+
+        </div>
+
+        <div class="copyright flex-center">
+          <p>&copy; <span id="date"></span></p>
+          <p> Skylark Farm Advice</p>
         </div>
 
       </div>
-    </div>
-
-    <div class="services-card">
-      <div class="services-card-title">
-        <h3>Access to support schemes</h3>
-      </div>
-
-      <div class="services-card-img"> <img src="/assets/images/lambsMobile.jpeg" alt=""></div>
-
-      <div class="services-card-content">
-        <p class="services-description">A wide variety of grants are now available to farmers in order to help support
-          environmental management.</p>
-
-        <p class="services-description">From Mid Tier to Higher Tier, Capital Grants and Woodland Support Grants,
-          through to Farming in Protected
-          Landscapes, Farming Investment Fund, Water Company grant schemes.</p>
-
-        <p class="services-description">With over 10 years experience in undertaking successful agri-environment
-          scheme
-          applications as well
-          as working with Catchment Sensitive Farming and Water Companies to implement and deliver grant schemes,
-          Amanda
-          can advise you on funding opportunities available, help you to decide what is right for your farm and assist
-          from application to delivery.
-        </p>
-      </div>
-    </div>
-
-    <div class="services-card">
-      <div class="services-card-title">
-        <h3>Soil Management</h3>
-      </div>
-      <div class="services-card-img"> <img src="/assets/images/soilManagementMobile.jpeg" alt=""></div>
-
-      <div class="services-card-content">
-        <p class="services-description">Provide advice on diffuse pollution and resource protection including the soil
-          management requirements under
-          Cross Compliance.</p>
-      </div>
-    </div>
-
-    <div class="services-card">
-      <div class="services-card-title">
-        <h3>Farm Advice Training and
-          Workshops</h3>
-      </div>
-      <div class="services-card-img"> <img src="/assets/images/workshopMobile.jpeg" alt=""></div>
-
-      <div class="services-card-content">
-        <p class="services-description">Experienced in arranging and delivering training and workshops on a range of
-          topics.</p>
-        <p>Recent events have included:</p>
-        <ul>
-          <li>hedgerow management</li>
-          <li>soil management</li>
-          <li>NVZ and Cross Compliance update</li>
-          <li>biobeds</li>
-          <li>equine management</li>
-          <li>farm pollinators</li>
-          <li>slug control</li>
-        </ul>
-      </div>
-
-    </div>
-
-  </section>
-  <!-- Services Section Ends Here -->
-
-  <!-- Case Studies Section Starts Here -->
-  <!-- <section class="case-studies-wrapper" id="case-studies"></section> -->
-  <!-- Case Studies Section Ends Here -->
-
-
-  <!-- Footer Starts Here -->
-  <footer class="footer" id="footer">
-
-    <div class="social-links flex-center">
-
-      <div>
-        <ul class="flex-center">
-          <li><a href="http://twitter.com"><i class="fa-brands fa-twitter"></i></a></li>
-
-          <li><a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li>
-
-          <li><a href="https://linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a></li>
-        </ul>
-
-      </div>
-
-      <div class="copyright flex-center">
-        <p>&copy; <span id="date"></span></p>
-        <p> Skylark Farm Advice</p>
-      </div>
-
-    </div>
 
 
 
 
-  </footer>
+    </footer>
 
   </div>
 
