added int dialing code for mobile number

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <aside class="contact-banner">
       <div class="contact-wrapper flex-center">
         <h1>Got a question?</h1>
-        <h1> <a href="tel:07305072073"></a>+44 73 05 07 2073</h1>
+        <h1> <a href="tel:+447305072073"></a>+44 73 05 07 2073</h1>
       </div>
     </aside>
     <!-- End Contact Banner -->
@@ -41,13 +41,13 @@
     <header>
       <!-- <nav class="navbar-wrapper"> -->
 
-        <!-- <div class="navbar flex-center"> -->
+      <!-- <div class="navbar flex-center"> -->
 
-          <!-- <div> <a href="https://skylarkfarmadvice.co.uk/"><img src="/assets/logos/SkylarkFA Logo_grn.svg" alt="logo"
+      <!-- <div> <a href="https://skylarkfarmadvice.co.uk/"><img src="/assets/logos/SkylarkFA Logo_grn.svg" alt="logo"
                 class="logo"></a>
           </div> -->
 
-          <!-- <div class="menu-btn">
+      <!-- <div class="menu-btn">
             <div class="menuIcon line1"></div>
             <div class="menuIcon line2"></div>
             <div class="menuIcon line3"></div>
@@ -72,42 +72,42 @@
             </ul>
           </div> -->
 
-          <nav class="navbar">
+      <nav class="navbar">
 
-            <div class="nav-logo">
-              <a href="https://skylarkfarmadvice.co.uk/"><img src="/assets/logos/SkylarkFA Logo_grn.svg" alt="logo"
-                  class="logo"></a>
-            </div>
+        <div class="nav-logo">
+          <a href="https://skylarkfarmadvice.co.uk/"><img src="/assets/logos/SkylarkFA Logo_grn.svg" alt="logo"
+              class="logo"></a>
+        </div>
 
-          <!-- Mobile Menu -->
-          <div class="menu-btn">
-            <a> <i class="fa-solid fa-bars"></i></a>
-          </div>
+        <!-- Mobile Menu -->
+        <div class="menu-btn">
+          <a> <i class="fa-solid fa-bars"></i></a>
+        </div>
 
-          <div class="menu-list hidden mobile">
-            <ul>
-              <!-- <li> <a href="/index.html">Home</a> </li> -->
-              <li> <a class="menu-link" href="/index.html#about">About</a> </li>
-              <li> <a class="menu-link" href="/index.html#services">Services</a> </li>
-            </ul>
-          </div>
+        <div class="menu-list hidden mobile">
+          <ul>
+            <!-- <li> <a href="/index.html">Home</a> </li> -->
+            <li> <a class="menu-link" href="/index.html#about">About</a> </li>
+            <li> <a class="menu-link" href="/index.html#services">Services</a> </li>
+          </ul>
+        </div>
 
-          <div class="contact-btn hidden mobile">
-            <a class="btn" href="mailto:amanda@skylarkfarmadvice.co.uk">Get in touch</a>
-          </div>
+        <div class="contact-btn hidden mobile">
+          <a class="btn" href="mailto:amanda@skylarkfarmadvice.co.uk">Get in touch</a>
+        </div>
 
-          <!-- Desktop Menu -->
-          <div class="menu-list desktop">
-            <ul>
-              <!-- <li> <a href="/index.html">Home</a> </li> -->
-              <li> <a class="menu-link-desktop" href="/index.html#about">About</a> </li>
-              <li> <a class="menu-link-desktop" href="/index.html#services">Services</a> </li>
-            </ul>
-          </div>
+        <!-- Desktop Menu -->
+        <div class="menu-list desktop">
+          <ul>
+            <!-- <li> <a href="/index.html">Home</a> </li> -->
+            <li> <a class="menu-link-desktop" href="/index.html#about">About</a> </li>
+            <li> <a class="menu-link-desktop" href="/index.html#services">Services</a> </li>
+          </ul>
+        </div>
 
-          <div class="contact-btn-desktop desktop">
-            <a class="btn" href="mailto:amanda@skylarkfarmadvice.co.uk">Get in touch</a>
-          </div>
+        <div class="contact-btn-desktop desktop">
+          <a class="btn" href="mailto:amanda@skylarkfarmadvice.co.uk">Get in touch</a>
+        </div>
 
       </nav>
     </header>
