js card section icon

--- a/index.html
+++ b/index.html
@@ -39,38 +39,6 @@
 
     <!-- Header Starts Here -->
     <header>
-      <!-- <nav class="navbar-wrapper"> -->
-
-      <!-- <div class="navbar flex-center"> -->
-
-      <!-- <div> <a href="https://skylarkfarmadvice.co.uk/"><img src="/assets/logos/SkylarkFA Logo_grn.svg" alt="logo"
-                class="logo"></a>
-          </div> -->
-
-      <!-- <div class="menu-btn">
-            <div class="menuIcon line1"></div>
-            <div class="menuIcon line2"></div>
-            <div class="menuIcon line3"></div>
-          </div>
-
-          <div class="nav-items nav-mobile">
-            <ul class="nav-display">
-              <li> <a class="nav-link" href="#about">About</a> </li>
-              <li> <a class="nav-link" href="#services">Services</a> </li>
-
-            </ul>
-
-            <div class="contact-btn nav-desktop">
-              <a class="btn" href="mailto:amanda@skylarkfarmadvice.co.uk">Get in touch</a>
-            </div>
-          </div>
-
-          <div class="nav-items nav-destop">
-            <ul class="nav-display">
-              <li> <a class="nav-link" href="#about">About</a> </li>
-              <li> <a class="nav-link" href="#services">Services</a> </li>
-            </ul>
-          </div> -->
 
       <nav class="navbar">
 
@@ -145,7 +113,7 @@
         the environmental potential of their land while <span class="text-highlight">supporting</span> the farm
         business.</p>
 
-      <p>I provide a range of services including including countryside stewardship; habitat and species surveys, and
+      <p>I provide a range of services including countryside stewardship; habitat and species surveys, and
         advice; compliance and greening guidance; soil management; meeting regulatory requirements, workshops and
         training and assurance schemes.</p>
 
@@ -179,50 +147,60 @@
           <div class="services-options">
 
             <div class="services-subtitle">
-              <h4 class="servicces-link">Pre-entry Countryside Stewardship Farm Review</h4>
-              <h4 class="services-btn">+</h4>
+              <h4 class="services-link">Pre-entry Countryside Stewardship Farm Review</h4>
+              <h4 class="services-btn"><i class="fa-solid fa-plus expand-icon"></i></h4>
             </div>
-            <p class="services-description">An initial visit to your farm to discuss the Countryside
-              Stewardship scheme requirements, priorities for your area and to identify potential options that you may
-              like
-              to consider in your application. A short report will be produced to help inform your future application.
-            </p>
+            <div class="services-description hidden">
+              <p>An initial visit to your farm to discuss the Countryside
+                Stewardship scheme requirements, priorities for your area and to identify potential options that you may
+                like
+                to consider in your application. A short report will be produced to help inform your future application.
+              </p>
+            </div>
           </div>
 
           <div class="services-options">
-
             <div class="services-subtitle">
               <h4 class="services-link">Mid Tier, Higher Tier and Capital Grant Applications</h4>
-              <h4 class="services-btn">+</h4>
+              <h4 class="services-btn"><i class="fa-solid fa-plus expand-icon"></i></h4>
             </div>
-            <p class="services-description">With over 10 years in undertaking successful
-              agri-environment scheme applications, Amanda will work with you to design an application that meets the
-              priorities for the area. Maximising your chances of a successful agreement, while working with the
-              requirements of your farm business.</p>
+            <div class="services-description hidden">
+              <p>With over 10 years in undertaking successful
+                agri-environment scheme applications, I will work with you to design an application that meets the
+                priorities for the area. Maximising your chances of a successful agreement, while working with the
+                requirements of your farm business.</p>
+            </div>
           </div>
 
           <div class="services-options">
 
             <div class="services-subtitle">
               <h4 class="services-link">Application Check </h4>
-              <h4 class="services-btn">+</h4>
+              <h4 class="services-btn"><i class="fa-solid fa-plus expand-icon"></i></h4>
             </div>
-            <p class="services-description">If you prefer to carry out your own application we provide an application
-              check service, ensuring the forms
-              have been completed as required and advising on whether the options chosen fit with the
-              Countryside Stewardship priorities for the area, maximising your chances of a successful application.</p>
+            <div class="services-description hidden">
+              <p>If you prefer to carry out your own application we provide an
+                application
+                check service, ensuring the forms
+                have been completed as required and advising on whether the options chosen fit with the
+                Countryside Stewardship priorities for the area, maximising your chances of a successful application.
+              </p>
+            </div>
           </div>
 
           <div class="services-options">
 
             <div class="services-subtitle">
               <h4 class="services-link">Stewardship Scheme MOT</h4>
-              <h4 class="services-btn">+</h4>
+              <h4 class="services-btn"><i class="fa-solid fa-plus expand-icon"></i></h4>
             </div>
-            <p class="services-description">Helping you to ensure you are meeting the requirements of your ELS, OELS,
-              HLS or Countryside Stewardship
-              scheme. Providing reassurance on compliance with the regulatory requirements together
-              with advice on how to maximise the environmental benefits of your scheme.</p>
+            <div class="services-description hidden">
+              <p>Helping you to ensure you are meeting the requirements of your ELS,
+                OELS,
+                HLS or Countryside Stewardship
+                scheme. Providing reassurance on compliance with the regulatory requirements together
+                with advice on how to maximise the environmental benefits of your scheme.</p>
+            </div>
           </div>
 
         </div>
@@ -241,22 +219,27 @@
             <div class="services-subtitle">
               <h4 class="services-link">A wide variety of grants are now available to farmers in order to help support
                 environmental management.</h4>
-              <!-- <h4 class="services-btn">+</h4> -->
+              <h4 class="services-btn"><i class="fa-solid fa-plus expand-icon"></i></h4>
             </div>
 
+            <div class="services-description hidden">
+              <p>From Mid Tier to Higher Tier, Capital Grants and Woodland Support
+                Grants,
+                through to Farming in Protected
+                Landscapes, Farming Investment Fund, Water Company grant schemes.</p>
+
+              <p>With over 10 years experience in undertaking successful
+                agri-environment
+                scheme
+                applications as well
+                as working with Catchment Sensitive Farming and Water Companies to implement and deliver grant schemes,
+                I can advise you on funding opportunities available, help you to decide what is right for your farm and
+                assist from application to delivery.
+              </p>
+            </div>
 
           </div>
-          <p class="services-description">From Mid Tier to Higher Tier, Capital Grants and Woodland Support Grants,
-            through to Farming in Protected
-            Landscapes, Farming Investment Fund, Water Company grant schemes.</p>
 
-          <p class="services-description">With over 10 years experience in undertaking successful agri-environment
-            scheme
-            applications as well
-            as working with Catchment Sensitive Farming and Water Companies to implement and deliver grant schemes,
-            I can advise you on funding opportunities available, help you to decide what is right for your farm and
-            assist from application to delivery.
-          </p>
 
         </div>
       </div>
@@ -298,11 +281,11 @@
             <div class="services-subtitle">
               <h4 class="services-link">Experienced in arranging and delivering training and workshops on a range of
                 topics.</h4>
-              <h4 class="services-btn">+</h4>
-
-              <p class="services-description">Recent events have included:</p>
-
-              <ul class="services-description">
+              <h4 class="services-btn"><i class="fa-solid fa-plus expand-icon"></i></h4>
+            </div>
+            <div class="services-description hidden">
+              <p>Recent events have included:
+              <ul>
                 <li>hedgerow management</li>
                 <li>soil management</li>
                 <li>NVZ and Cross Compliance update</li>
@@ -311,13 +294,15 @@
                 <li>farm pollinators</li>
                 <li>slug control</li>
               </ul>
-
             </div>
 
 
           </div>
 
+
         </div>
+
+      </div>
 
     </section>
     <!-- Services Section Ends Here -->
