--- a/index.html
+++ b/index.html
@@ -6,7 +6,58 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#01332B">
-  <title>Independen Farm Advice Service</title>
+
+  <!-- Meta Tags -->
+  <!-- Primary Meta Tags -->
+  <title>Skylark Farm Advice Service | Country Stewardship | Grant Applications & Checks | Stewardship MOT| Soil
+    Management</title>
+  <meta name="title"
+    content="Skylark Farm Advice Service | Country Stewardship | Grant Applications & Checks | Stewardship MOT|  Soil Management">
+  <meta name="description"
+    content="Independent Farm Advice Services providing a range of options including countryside stewardship; habitat and species surveys, and advice; compliance and greening guidance; soil management; meeting regulatory requirements, workshops and training and assurance schemes.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://skylarkfarmadvice.co.uk/">
+  <meta property="og:title"
+    content="Skylark Farm Advice Service | Country Stewardship | Grant Applications & Checks | Stewardship MOT|  Soil Management">
+  <meta property="og:description"
+    content="Independent Farm Advice Services providing a range of options including countryside stewardship; habitat and species surveys, and advice; compliance and greening guidance; soil management; meeting regulatory requirements, workshops and training and assurance schemes.">
+  <meta property="og:image" content="">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://skylarkfarmadvice.co.uk/">
+  <meta property="twitter:title"
+    content="Skylark Farm Advice Service | Country Stewardship | Grant Applications & Checks | Stewardship MOT|  Soil Management">
+  <meta property="twitter:description"
+    content="Independent Farm Advice Services providing a range of options including countryside stewardship; habitat and species surveys, and advice; compliance and greening guidance; soil management; meeting regulatory requirements, workshops and training and assurance schemes.">
+  <meta property="twitter:image" content="">
+
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/assets/favicomatic/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/favicomatic/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/favicomatic/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/favicomatic/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="/assets/favicomatic/apple-touch-icon-60x60.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/assets/favicomatic/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/assets/favicomatic/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/assets/favicomatic/apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196" />
+  <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <meta name="application-name" content="&nbsp;" />
+  <meta name="msapplication-TileColor" content="#FFFFFF" />
+  <meta name="msapplication-TileImage" content="/assets/favicomatic/mstile-144x144.png" />
+  <meta name="msapplication-square70x70logo" content="/assets/favicomatic/mstile-70x70.png" />
+  <meta name="msapplication-square150x150logo" content="/assets/favicomatic/mstile-150x150.png" />
+  <meta name="msapplication-wide310x150logo" content="/assets/favicomatic/mstile-310x150.png" />
+  <meta name="msapplication-square310x310logo" content="/assets/favicomatic/mstile-310x310.png" />
+
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
   <!-- Fontawesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -21,6 +72,8 @@
 
   <!-- Local Script -->
   <script src="./app.js" defer></script>
+
+
 
 </head>
 
